@@ -9,41 +9,50 @@ html {
 }
 
 body { margin: 0; padding: 0; }
-body.console {}
+
+/* The html tag has these classes and attributes too. */
 body.normal {}
+body.console {}
+body[type=channel] {}
+body[type=talk] {}
+body[type=console] {}
+body[channelname=#limechat] {}
 
 hr { margin: 0.5em 2em; }
+a {}
+
+.line { margin: 0 -4px; padding: 0 4px 1px 4px; }
+.line[alternate=even] {}
+.line[alternate=odd] {}
 
 .url { word-break: break-all; }
 .address { text-decoration: underline; word-break: break-all; }
 .highlight { color: #f0f; font-weight: bold; }
-.line { margin: 0 -4px; padding: 0 4px 1px 4px; }
-.even_line {}
-.odd_line {}
 
 .time { color: #048; }
 .place { color: #008; }
-.nick_normal { color: #008; }
-.nick_myself { color: #66a; }
 
-.system { color: #080; }
-.error { color: #f00; font-weight: bold; }
-.reply { color: #088; }
-.error_reply { color: #f00; }
-.dcc_send_send { color: #088; }
-.dcc_send_receive { color: #00c; }
-.privmsg {}
-.notice { color: #888; }
-.action { color: #080; }
-.join { color: #080; }
-.part { color: #080; }
-.kick { color: #080; }
-.quit { color: #080; }
-.kill { color: #080; }
-.nick { color: #080; }
-.mode { color: #080; }
-.topic { color: #080; }
-.invite { color: #080; }
-.wallops { color: #080; }
-.debug_send { color: #aaa; }
-.debug_receive { color: #444; }
+.sender[type=normal] { color: #008; }
+.sender[type=myself] { color: #66a; }
+
+.line[type=system] { color: #080; }
+.line[type=error] { color: #f00; font-weight: bold; }
+.line[type=reply] { color: #088; }
+.line[type=error_reply] { color: #f00; }
+.line[type=dcc_send_send] { color: #088; }
+.line[type=dcc_send_receive] { color: #00c; }
+.line[type=privmsg] {}
+.line[type=notice] { color: #888; }
+.line[type=action] { color: #080; }
+.line[type=join] { color: #080; }
+.line[type=part] { color: #080; }
+.line[type=kick] { color: #080; }
+.line[type=quit] { color: #080; }
+.line[type=kill] { color: #080; }
+.line[type=nick] { color: #080; }
+.line[type=mode] { color: #080; }
+.line[type=topic] { color: #080; }
+.line[type=invite] { color: #080; }
+.line[type=wallops] { color: #080; }
+.line[type=debug_send] { color: #aaa; }
+.line[type=debug_receive] { color: #444; }
